
4. New: OS package functions.  os.pid, equivalent to Bourne shell $$. os.error_string (strerror) and documentation fixed.

5. Fix: instead of "identifier not declared", now get "too few parameter" when calling a user function with too few parameters.  Might be a more efficient way to implement this.

6. New: abstract procedures and subprograms.

7. Fix: functions without a return value statement produce an error.

8. New: limited arrays, records and anonymous arrays.

9. Fix: re-raise fixed to work in if statements in an exception handler.

10. New: "nonstandard" software model as a catch-all for no standard.

11. Fix: variables with explicit limited qualifier are now limited.

12. New: return statements may have a when clause, like an exit statement.

13. Refactor: constants are no longer a separate identifier class from variables.  constant is now an identifier usage qualifier like limited and abstract and can be applied to any identifier class.  constants are now variables with a usage of "constant".

14. Change: command variables must now be limited instead of constant, in line with new limited functionality.  They cannot be used in an expression or assigned to.

15. New: at debug prompt, limited variables, like constants, may be assigned a value but will report a warning. [testing needed]

16. Fix: calling a procedure or function with no parameters when parameters were expected produces an appropriate error message.

17. New: types and subtypes may have an accept clause/block to validate values, as in programming-by-contract.

18. New. raise statements can have a when clause, like an exit statement. [docs, testing needed]

19. Fix: statements starting with paths like /bin/bash and bin/bash are now recognized as shell commands.

20. Fix: broken pipes (such as env | head) no longer show meaningless error messages.

21. Refactor: parser.adb broken up into interpreter.adb and parser child packages.
